--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -268,6 +268,7 @@
     <string name="lockscreen_battery_status_alwayson">Always On</string>
     <string name="lockscreen_vibrate_enabled_title">Vibrate</string>
     <string name="lockscreen_vibrate_enabled_head">Vibrate when unlocking your device</string>
+    <string name="battery_around_lockscreen_ring">Battery level around lock ring</string>
 
     <!-- Lockscreen Shortcuts -->
     <string name="lockscreen_shortcuts_title">Shortcuts</string>
