--- a/res/xml/security_settings_slide_delay_liquid.xml
+++ b/res/xml/security_settings_slide_delay_liquid.xml
@@ -16,6 +16,22 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
+	
+    <PreferenceCategory
+        android:key="lockscreen_shortcuts_header"
+        android:title="@string/lockscreen_shortcuts_settings">
+
+        <PreferenceScreen
+            android:key="lockscreen_shortcuts"
+            android:title="@string/lockscreen_shortcuts_settings"
+            android:fragment="org.omnirom.omnigears.LockscreenTargets"/>
+
+        <CheckBoxPreference
+            android:key="battery_around_lockscreen_ring"
+            android:title="@string/battery_around_lockscreen_ring"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="delay_and_timeout"
