--- a/res/xml/security_settings_slide_delay_liquid.xml
+++ b/res/xml/security_settings_slide_delay_liquid.xml
@@ -16,26 +16,17 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
-	
-    <PreferenceCategory
-        android:key="lockscreen_shortcuts_header"
-        android:title="@string/lockscreen_shortcuts_settings">
-
-        <PreferenceScreen
-            android:key="lockscreen_shortcuts"
-            android:title="@string/lockscreen_shortcuts_settings"
-            android:fragment="org.omnirom.omnigears.LockscreenTargets"/>
-
-        <CheckBoxPreference
-            android:key="battery_around_lockscreen_ring"
-            android:title="@string/battery_around_lockscreen_ring"
-            android:defaultValue="true" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="delay_and_timeout"
         android:title="@string/delay_and_timeout_title">
+		
+        <CheckBoxPreference
+            android:key="battery_around_lockscreen_ring"
+            android:title="@string/battery_around_lockscreen_ring"
+            android:defaultValue="false" /> 
 
         <CheckBoxPreference
             android:key="slide_lock_delay_toggle"
